# the-senate-discord-bot

./: .dockerignore  .gitignore  README.md  blank_config.env  config.env.template  database.py  docker-compose.yml  main.py  pyproject.toml  stayin_alive.py  temp
bot/: .dockerignore  Dockerfile  bot.py  main.py  requirements.txt
bot/cogs/: action_log.py  admin.py  auto_delete.py  auto_roles.py  blank_custom.py  custom.py.template  error_handler.py  events.py  extensions.py  moderation.py  owner.py  random.py  reaction_roles.py  roles.py  suggestions.py  testing.py  users.py  voice.py
bot/database/: data_versions.py  database.py  db.py  versions.py
bot/database/versions/: 1.py
bot/helpers/: bot_status.py  checks.py  converters.py  debug.py  embeds.py  find.py  stayin_alive.py
bot/utils/: bot_status.py  checks.py  config.py  converters.py  cooldown.py  debug.py  exceptions.py  find_object.py  transformers.py
cogs/: admin.py  auto_delete.py  auto_roles.py  checks.py  events.py  extensions.py  moderation.py  random.py  reactionRoles.py  reaction_roles.py  roles.py  suggestions.py  testing.py
helpers/: bot_status.py  checks.py  embeds.py
